--- a/www/index.html
+++ b/www/index.html
@@ -27,23 +27,49 @@
   <body ng-app="app" >
 
 
-      <ion-nav-bar class="bar-balanced" >
-        <ion-nav-buttons side="right">
-          <button>
-            Right Button
-          </button>
+  <ion-side-menus enable-menu-with-back-views="true">
+    <ion-side-menu-content>
+      <ion-nav-bar class="bar-balanced">
+        <ion-nav-back-button>
+        </ion-nav-back-button>
+        <ion-nav-buttons side="left">
+          <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
+
         </ion-nav-buttons>
-     </ion-nav-bar >
+        <ion-nav-buttons side="right">
 
-      <div  ng-include="menu.html"></div>
+          <button class="button icon ion-android-sync " style="border: 1px solid #efeff4;" side="right"></button>
+        </ion-nav-buttons>
+      </ion-nav-bar>
+      <ion-nav-view ></ion-nav-view>
+    </ion-side-menu-content>
 
+    <ion-side-menu side="left">
+      <ion-header-bar class="bar-stable">
+        <h1 class="title">Left</h1>
+      </ion-header-bar>
+      <ion-content>
+        <ion-list>
 
-      <ion-nav-view >
-
-      </ion-nav-view>
-
-
-
+          <ion-item menu-close href="#/tab/commandesParMois">
+            Dashboard
+          </ion-item>
+          <ion-item menu-close href="#/produits">
+            Produits
+          </ion-item>
+          <ion-item menu-close href="#/envoyerMessage">
+            Envoyer message
+          </ion-item>
+          <ion-item menu-close href="#/mesRemises">
+            Mes remises
+          </ion-item>
+          <ion-item menu-close href="#/mesCotations">
+            Mes cotations
+          </ion-item>
+        </ion-list>
+      </ion-content>
+    </ion-side-menu>
+  </ion-side-menus>
   </body>
 
 
